--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,3 @@
 datos/NoMontyHall.csv filter=lfs diff=lfs merge=lfs -text
 datos/alturas.csv filter=lfs diff=lfs merge=lfs -text
+datos/positivos_por_tests.csv filter=lfs diff=lfs merge=lfs -text
