--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,8 @@ dependencies = [
     "matplotlib>=3.9.2",
     "pandas>=2.2.2",
     "statsmodels>=0.14.2",
+    "pymc>=5.15.0",
+    "arviz>=0.19.0",
 ]
 
 [build-system]
