--- a/.gitattributes
+++ b/.gitattributes
@@ -3,3 +3,4 @@ datos/alturas.csv filter=lfs diff=lfs merge=lfs -text
 datos/positivos_por_tests.csv filter=lfs diff=lfs merge=lfs -text
 src/ibc/practica2/ej3_1.pdf filter=lfs diff=lfs merge=lfs -text
 src/ibc/practica2/ej3_2.pdf filter=lfs diff=lfs merge=lfs -text
+*.pdf filter=lfs diff=lfs merge=lfs -text
